--- a/index.html
+++ b/index.html
@@ -4,11 +4,61 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Software services menu</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1 class="heading">РЕМОНТ ТЕХНИКИ РАЗЛИЧНЫХ БРЕНДОВ</h1>
-   
+    <header class="header">
+        <h1 class="header__heading">РЕМОНТ ТЕХНИКИ РАЗЛИЧНЫХ БРЕНДОВ</h1>
+    </header>
+    <ul class="list">
+        <li class="list__list-item">
+                <img class="list__lenovo-logo list__logo" src="statics/lenovo.png" alt="lenovo">
+                <button class="list__go-button"></button>
+        </li>
+        <li class="list__list-item">
+                <img class="list__samsung-logo list__logo" src="statics/samsung.png" alt="samsung">
+                <button class="list__go-button"></button>
+        </li>
+        <li class="list__list-item">
+                <img class="list__apple-logo list__logo" src="statics/apple.png" alt="apple">
+                <button class="list__go-button"></button>
+        </li>
+        <li class="list__list-item">
+                <img class="list__viewsonic-logo list__logo" src="statics/viewsonic.png" alt="viewsonic">
+                <button class="list__go-button"></button>
+        </li>
+        <li class="list__list-item">
+                <img class="list__bosh-logo list__logo" src="statics/bosh.png" alt="bosh">
+                <button class="list__go-button"></button>
+        </li>
+        <li class="list__list-item">
+                <img class="list__hp-logo list__logo" src="statics/hp.png" alt="hp">
+                <button class="list__go-button"></button>
+        </li>
+        <li class="list__list-item">
+                <img class="list__acer-logo list__logo" src="statics/acer.png" alt="acer">
+                <button class="list__go-button"></button>
+        </li>
+        <li class="list__list-item">
+                <img class="list__sony-logo list__logo" src="statics/sony.png" alt="sony">
+                <button class="list__go-button"></button>
+        </li>
+        <li class="list__list-item">
+                <img class="list__lenovo-logo list__logo" src="statics/lenovo.png" alt="lenovo">
+                <button class="list__go-button"></button>
+        </li>
+        <li class="list__list-item">
+                <img class="list__samsung-logo list__logo" src="statics/samsung.png" alt="samsung">
+                <button class="list__go-button"></button>
+        </li>
+        <li class="list__list-item">
+                <img class="list__apple-logo list__logo" src="statics/apple.png" alt="apple">
+                <button class="list__go-button"></button>
+        </li>
+    </ul>
+
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
