--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <header class="header">
         <h1 class="header__heading">РЕМОНТ ТЕХНИКИ РАЗЛИЧНЫХ БРЕНДОВ</h1>
     </header>
-    <main class="main swiper-container">
+    <main class="main">
+        <div class="swiper-container">
         <ul class="list swiper-wrapper">
             <li class="list__list-item swiper-slide">
                 <img class="list__lenovo-logo list__logo" src="statics/lenovo.png" alt="lenovo">
@@ -49,15 +50,19 @@
                 <img class="list__lenovo-logo list__logo" src="statics/lenovo.png" alt="lenovo">
                 <button class="list__go-button"></button>
             </li>
-            <li class="list__list-item swiper-slide">
-                <img class="list__samsung-logo list__logo" src="statics/samsung.png" alt="samsung">
-                <button class="list__go-button"></button>
-            </li>
-            <li class="list__list-item swiper-slide">
-                <img class="list__apple-logo list__logo" src="statics/apple.png" alt="apple">
-                <button class="list__go-button"></button>
-            </li>
         </ul>
+        <div class="swiper-pagination">
+            <span class="swiper-pagination-bullet"></span>
+            <span class="swiper-pagination-bullet"></span>
+            <span class="swiper-pagination-bullet"></span>
+            <span class="swiper-pagination-bullet"></span>
+            <span class="swiper-pagination-bullet"></span>
+            <span class="swiper-pagination-bullet"></span>
+            <span class="swiper-pagination-bullet"></span>
+            <span class="swiper-pagination-bullet"></span>
+            <span class="swiper-pagination-bullet"></span>
+        </div>
+    </div>
     </main>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="script.js"></script>
