--- a/index.html
+++ b/index.html
@@ -38,19 +38,31 @@
                     <img class="list__hp-logo list__logo" src="statics/hp.png" alt="hp">
                     <button class="list__go-button"></button>
                 </li>
-                <li class="list__list-item swiper-slide">
+                <li class="list__list-item list__list-item--hidden768 swiper-slide">
                     <img class="list__acer-logo list__logo" src="statics/acer.png" alt="acer">
                     <button class="list__go-button"></button>
                 </li>
-                <li class="list__list-item swiper-slide">
+                <li class="list__list-item list__list-item--hidden768 swiper-slide">
                     <img class="list__sony-logo list__logo" src="statics/sony.png" alt="sony">
                     <button class="list__go-button"></button>
                 </li>
-                <li class="list__list-item swiper-slide">
+                <li class="list__list-item list__list-item--hidden768 hidden-showed swiper-slide">
                     <img class="list__lenovo-logo list__logo" src="statics/lenovo.png" alt="lenovo">
                     <button class="list__go-button"></button>
                 </li>
+                <li class="list__list-item list__list-item--show1120">
+                    <img class="list__samsung-logo list__logo" src="statics/samsung.png" alt="samsung">
+                    <button class="list__go-button"></button>
+                </li>
+                <li class="list__list-item list__list-item--show1120">
+                    <img class="list__apple-logo list__logo" src="statics/apple.png" alt="apple">
+                    <button class="list__go-button"></button>
+                </li>
             </ul>
+            <button class="show-more">
+                <img class="show-more__button" src="statics/icon.png">
+                <span class="show-more__text">Показать все</span>
+            </button>
             <span class="fade"></span>
             <div class="swiper-pagination">
                 <span class="swiper-pagination-bullet"></span>
