--- a/index.html
+++ b/index.html
@@ -46,15 +46,15 @@
                     <img class="list__sony-logo list__logo" src="statics/sony.png" alt="sony">
                     <button class="list__go-button"></button>
                 </li>
-                <li class="list__list-item list__list-item--hidden768 hidden-showed swiper-slide">
+                <li class="list__list-item list__list-item--hidden768 list__list-item--hidden1100 swiper-slide">
                     <img class="list__lenovo-logo list__logo" src="statics/lenovo.png" alt="lenovo">
                     <button class="list__go-button"></button>
                 </li>
-                <li class="list__list-item list__list-item--show1120">
+                <li class="list__list-item list__list-item--hidden768 list__list-item--hidden1100 swiper-slide">
                     <img class="list__samsung-logo list__logo" src="statics/samsung.png" alt="samsung">
                     <button class="list__go-button"></button>
                 </li>
-                <li class="list__list-item list__list-item--show1120">
+                <li class="list__list-item list__list-item--hidden768 list__list-item--hidden1100 swiper-slide">
                     <img class="list__apple-logo list__logo" src="statics/apple.png" alt="apple">
                     <button class="list__go-button"></button>
                 </li>
